<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usc.zsurani.grubmate.activity_and_fragment.CreateGroupActivity"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Group"
        android:id="@+id/label_create_group"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="#2f2f2f" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_group_name"
        android:layout_below="@id/label_create_group"
        android:layout_alignParentStart="true"
        android:text="Group Name: "
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_group_name"
        android:layout_alignBaseline="@id/label_group_name"
        android:layout_toEndOf="@id/label_group_name"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_add_members"
        android:layout_below="@id/label_group_name"
        android:layout_marginTop="16dp"
        android:text="Add Members" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_back_to_mygroups"
        android:layout_below="@id/button_add_members"
        android:text="back to my groups"/>


</RelativeLayout>
