<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.usc.zsurani.grubmate.activity_and_fragment.CreateNotificationActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notification Name: "
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/edit_notification_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Time Begin: "
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:inputType="time"
                android:hint="15:30:00"
                android:id="@+id/edit_notification_begin_time"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Time End: "
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:hint="17:30:00"
                android:inputType="time"
                android:id="@+id/edit_notification_end_time"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags: "
                android:textSize="18dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:hint="Separate by commas"
                android:id="@+id/edit_notification_tags"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categories: "
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxAmerican"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="American" />

                <CheckBox
                    android:id="@+id/checkBoxMexican"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Mexican" />

                <CheckBox
                    android:id="@+id/checkBoxFastFood"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Fast Food" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxBurger"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Burger" />

                <CheckBox
                    android:id="@+id/checkBoxPizza"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Pizza" />

                <CheckBox
                    android:id="@+id/checkBoxAsian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Asian" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxCoffee"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Coffee" />

                <CheckBox
                    android:id="@+id/checkBoxItalian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Italian" />

                <CheckBox
                    android:id="@+id/checkBoxSandwich"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Sandwich" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxSushi"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Sushi" />

                <CheckBox
                    android:id="@+id/checkBoxBreakfast"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Breakfast Food" />

                <CheckBox
                    android:id="@+id/checkBoxDessert"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Dessert" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxBakery"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Bakery" />

                <CheckBox
                    android:id="@+id/checkBoxBoba"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Boba" />

                <CheckBox
                    android:id="@+id/checkBoxThai"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Thai" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkBoxIndian"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Indian" />

                <CheckBox
                    android:id="@+id/checkBoxHomemade"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Homemade" />

                <CheckBox
                    android:id="@+id/checkBoxRestaurant"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Restaurant" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SAVE"
                android:textSize="18sp"
                android:id="@+id/button_save_new_notification"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
